<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_40" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/sendGeneralBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_general_broadcast" />

            <Button
                android:id="@+id/sendLocalBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sendGeneralBroadcast"
                android:text="@string/send_local_broadcast" />

            <Button
                android:id="@+id/sendOrderedBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sendLocalBroadcast"
                android:text="@string/send_ordered_broadcast" />

            <Button
                android:id="@+id/sendStickyBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sendOrderedBroadcast"
                android:text="@string/send_sticky_broadcast" />
        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/trinea_info" />

</RelativeLayout>